MFC/AXL(Library)/Visual Basic(Net)/AXDev.vb

Option Strict Off
Option Explicit On
Module AXDev
    
    ' Use Board Number and find Board Address
    Public Declare Function AxlGetBoardAddreas Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef upBoardAddress As Integer) As Integer
    ' Use Board Number and find Board ID
    Public Declare Function AxlGetBoardID Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef upBoardID As Integer) As Integer
    ' Use Board Number and find Board Version
    Public Declare Function AxlGetBoardVersion Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef upBoardVersion As Integer) As Integer
    ' Use Board Number/Module Position and find Module ID
    Public Declare Function AxlGetModuleID Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef upModuleID As Integer) As Integer
    ' Use Board Number/Module Position and find Module Version
    Public Declare Function AxlGetModuleVersion Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef upModuleVersion As Integer) As Integer
    
    Public Declare Function AxlGetModuleNodeInfo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef upNetNo As Integer, ByRef upNodeAddr As Integer) As Integer

    ' Only for PCI-R1604[RTEX]
    ' Writing user data to embedded flash memory
    ' lPageAddr(0 ~ 199)
    ' lByteNum(1 ~ 120)
    ' Note) Delay time is required for completing writing operation to Flash(Max. 17mSec)
    Public Declare Function AxlSetDataFlash Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lPageAddr As Integer, ByVal lBytesNum As Integer, ByRef bpSetData As Byte) As Integer
    ' Reading datas from embedded flash memory
    ' lPageAddr(0 ~ 199)
    ' lByteNum(1 ~ 120)
    Public Declare Function AxlGetDataFlash Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lPageAddr As Integer, ByVal lBytesNum As Integer, ByRef bpGetData As Byte) As Integer

    ' Use Board Number/Module Position and find AIO Module Number
    Public Declare Function AxaInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef lpModuleNo As Integer) As Integer
    ' Use Board Number/Module Position and find DIO Module Number
    Public Declare Function AxdInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef lpModuleNo As Integer) As Integer
    
    ' IPCOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommand Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte) As Integer
    ' 8bit IPCOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData08 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 8bit IPCOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData08 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 16bit IPCOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData16 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 16bit IPCOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData16 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 24bit IPCOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData24 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 24bit IPCOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData24 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 32bit IPCOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData32 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 32bit IPCOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData32 Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    
    ' QICOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte) As Integer
    ' 8bit QICOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData08Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 8bit QICOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData08Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 16bit QICOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData16Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 16bit QICOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData16Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 24bit QICOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData24Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 24bit QICOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData24Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    ' 32bit QICOMMAND Setting at an appoint axis
    Public Declare Function AxmSetCommandData32Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByVal uData As Integer) As Integer
    ' Get 32bit QICOMMAND at an appoint axis
    Public Declare Function AxmGetCommandData32Qi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sCommand As Byte, ByRef upData As Integer) As Integer
    
    ' Get Port Data at an appoint axis - IP
    Public Declare Function AxmGetPortData Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wOffset As Integer, ByRef upData As Integer) As Integer
    ' Port Data Setting at an appoint axis - IP
    Public Declare Function AxmSetPortData Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wOffset As Integer, ByRef dwData As Integer) As Integer
    ' Get Port Data at an appoint axis - QI
    Public Declare Function AxmGetPortDataQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wOffset As Integer, ByRef upData As Integer) As Integer
    ' Port Data Setting at an appoint axis - QI
    Public Declare Function AxmSetPortDataQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal wOffset As Integer, ByRef dwData As Integer) As Integer
    
    ' Set the script at an appoint axis.  - IP
    ' sc    : Script number (1 - 4)
    ' event : Define an event SCRCON to happen.
    '         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
    ' cmd   : Define a selection SCRCMD however we change any content
    ' data  : Selection to change any Data.
    Public Declare Function AxmSetScriptCaptionIp Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByVal event1 As Integer, ByVal data As Integer) As Integer
    ' Return the script at an appoint axis.  - IP
    Public Declare Function AxmGetScriptCaptionIp Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByRef event1 As Integer, ByRef data As Integer) As Integer

    ' Set the script at an appoint axis.  - QI
    ' sc    : Script number (1 - 4)
    ' event : Define an event SCRCON to happen.
    '         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
    ' cmd   : Define a selection SCRCMD however we change any content
    ' data  : Selection to change any Data.
    Public Declare Function AxmSetScriptCaptionQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByVal event1 As Integer, ByVal cmd As Integer, ByVal data As Integer) As Integer
    ' Return the script at an appoint axis. - QI
    Public Declare Function AxmGetScriptCaptionQi Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal sc As Integer, ByRef event1 As Integer, ByRef cmd As Integer, ByRef data As Integer) As Integer

    ' Clear orders a script inside Queue Index at an appoint axis
    ' uSelect IP. 
    ' uSelect(0): Script Queue Index Clear.
    '        (1): Caption Queue Index Clear.
    ' uSelect QI. 
    ' uSelect(0): Script Queue 1 Index Clear.
    '        (1): Script Queue 2 Index Clear.
    Public Declare Function AxmSetScriptCaptionQueueClear Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uSelect As Integer) As Integer

    ' Return Index of a script inside Queue at an appoint axis.
    ' uSelect IP
    ' uSelect(0): Read Script Queue Index
    '        (1): Read Caption Queue Index
    ' uSelect QI. 
    ' uSelect(0): Read Script Queue 1 Index
    '        (1): Read Script Queue 2 Index
    Public Declare Function AxmGetScriptCaptionQueueCount Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef updata As Integer, ByVal uSelect As Integer) As Integer

    ' Return Data number of a script inside Queue at an appoint axis.
    ' uSelect IP
    ' uSelect(0): Read Script Queue Data
    '        (1): Read Caption Queue Data
    ' uSelect QI.
    ' uSelect(0): Read Script Queue 1 Data
    '        (1): Read Script Queue 2 Data
    Public Declare Function AxmGetScriptCaptionQueueDataCount Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef updata As Integer, ByVal uSelect As Integer) As Integer

    ' Read an inside data.
    Public Declare Function AxmGetOptimizeDriveData Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dMinVel As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByRef wRangeData As Integer, ByRef wStartStopSpeedData As Integer, ByRef wObjectSpeedData As Integer, ByRef wAccelRate As Integer, ByRef wDecelRate As Integer) As Integer

    ' Setting up confirmes the register besides within the board by Byte.
    Public Declare Function AxmBoardWriteByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal byData As Byte) As Integer
    Public Declare Function AxmBoardReadByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef byData As Byte) As Integer

    ' Setting up confirmes the register besides within the board by Word.
    Public Declare Function AxmBoardWriteWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal wData As Integer) As Integer
    Public Declare Function AxmBoardReadWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef wData As Integer) As Integer

    ' Setting up confirmes the register besides within the board by DWord.
    Public Declare Function AxmBoardWriteDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal dwData As Integer) As Integer
    Public Declare Function AxmBoardReadDWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef dwData As Integer) As Integer

    ' Setting up confirmes the register besides within the Module by Byte.
    Public Declare Function AxmModuleWriteByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByVal byData As Byte) As Integer
    Public Declare Function AxmModuleReadByte Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByRef byData As Byte) As Integer

    ' Setting up confirmes the register besides within the Module by Word.
    Public Declare Function AxmModuleWriteWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByVal wData As Integer) As Integer
    Public Declare Function AxmModuleReadWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByVal wOffset As Integer, ByRef wData As Integer) As Integer
